responseの型を定義
